samples/k8s/rule-engine-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-engine
  labels:
    app: rule-engine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rule-engine
  template:
    metadata:
      labels:
        app: rule-engine
    spec:
      serviceAccountName: rule-engine
      containers:
        - name: rule-engine
          image: ghcr.io/kshitijchauhan/rule-engine:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
