samples/k8s/transaction-ingestion-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-ingestion
  labels:
    app: transaction-ingestion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: transaction-ingestion
  template:
    metadata:
      labels:
        app: transaction-ingestion
    spec:
      serviceAccountName: transaction-ingestion
      containers:
        - name: transaction-ingestion
          image: ghcr.io/kshitijchauhan/transaction-ingestion:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
